--- a/gallery.css
+++ b/gallery.css
@@ -39,8 +39,9 @@
     height: 300px;
     /* margin-top: 20px; */
     overflow: hidden;
-    /* border: 1px solid gold; */
+    border: 1px solid gold;
     transition: all 300ms ease-in-out;
+
     
     
 }
@@ -116,14 +117,14 @@ padding: 1em;
 
 .mid_container
 {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     /* flex-direction: co; */
 }
 
 .moto_container
 {
-    border:1px solid gold;
+    /* border:1px solid gold; */
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
@@ -164,4 +165,30 @@ height: 100%;
 .moto > figcaption
 {
     height: 40px;
+}
+
+footer
+{
+    position: relative;
+    top:0;
+}
+
+@media(max-width:700px)
+{
+    .cars
+    {
+        flex-basis: 40%;
+    }
+
+    .car_bttn
+    {
+        margin: 50px auto;
+    }
+}
+@media(max-width:500px){
+    .cars
+    {
+        flex-basis: 50%;
+    }
+
 }
