--- a/rent.css
+++ b/rent.css
@@ -5,9 +5,9 @@ body{
     /* background: url(./imges/main_bg.jpg); */
     background-size: cover;
     width: 100vw;
-    height: 100%;
+    /* height: 100%; */
     color: var(--primary1);
-    ;
+    
 }
 
 /* .decoration
@@ -43,6 +43,14 @@ body{
       text-transform: uppercase;
       font-weight: 700;
   }
+
+
+.Cname
+{
+    color: var(--primary2);
+    font-size:1.2em;
+}
+
   .container form{
     padding: 30px 0 0 0;
   }
@@ -184,7 +192,7 @@ body{
       border-radius: 10px;
   }
 
-.decoration  {
+/* .decoration  {
      position: absolute;
      right: -80px;
      top:200px;
@@ -197,7 +205,7 @@ body{
     border-radius: 50%;
     /* opacity: 0.3; */
 
-  }
+  /* } */ 
 
 .date
 {
@@ -213,6 +221,26 @@ body{
 .date_lbl
 {
     margin-top: 10px;
+}
+
+i{
+    color:var(--primary3);
+}
+
+.up_foot_item > h3
+{
+    color: var(--primary3);
+}
+
+footer
+{
+    position: relative;
+    top:0;
+}
+
+.foot_title
+{
+    color: var(--primary3);
 }
 
   @media (max-width: 700px) {
