--- a/contact.css
+++ b/contact.css
@@ -48,7 +48,7 @@ body{
 
 .navFlexParent
 {
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 .container{
@@ -75,6 +75,12 @@ body{
   display: flex;
   margin: 32px 0;
 }
+
+input , textarea
+{
+  color:var(--primary2);
+}
+
 form .form-row .input-data{
   width: 100%;
   height: 40px;
