--- a/gallery.css
+++ b/gallery.css
@@ -39,7 +39,7 @@
     height: 300px;
     /* margin-top: 20px; */
     overflow: hidden;
-    border: 1px solid gold;
+    /* border: 1px solid gold; */
     transition: all 300ms ease-in-out;
 
     
