--- a/contact.css
+++ b/contact.css
@@ -54,7 +54,7 @@ body{
 .container{
   max-width: 800px;
   background: var();
-  width: 800px;
+  /* width: 800px; */
   padding: 25px 40px 10px 40px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
   margin:0 auto
@@ -196,6 +196,10 @@ footer
   .container .text{
     font-size: 30px;
   }
+  /* .text
+  {
+    text-align: center;
+  } */
   .container form{
     padding: 10px 0 0 0;
   }
