--- a/rent.css
+++ b/rent.css
@@ -24,7 +24,7 @@ body{
 .container{
     max-width: 800px;
     background:var();
-    width: 800px;
+    /* width: 800px; */
     padding: 25px 40px 10px 40px;
     box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
     margin: 0 auto;
