--- a/contact.css
+++ b/contact.css
@@ -42,7 +42,6 @@ body{
 {
   position: absolute;
   height: 150px;
-  top: -9%;
   left: 0;
 }
 
@@ -54,7 +53,7 @@ body{
 .container{
   max-width: 800px;
   background: var();
-  /* width: 800px; */
+  height: 700px;
   padding: 25px 40px 10px 40px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
   margin:0 auto
