--- a/rent.css
+++ b/rent.css
@@ -2,29 +2,17 @@
 
 body{
     position: relative;
-    /* background: url(./imges/main_bg.jpg); */
     background-size: cover;
     width: 100vw;
-    /* height: 100%; */
     color: var(--primary1);
     
 }
 
-/* .decoration
-{
-    position: absolute;
-    width: 100%;
-    height: 85vh;
-    background:url(./imges/main_bg_2.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    clip-path: polygon(0 0 , 100% 0, 0 100%,0 100%);
-} */
+
 
 .container{
     max-width: 800px;
     background:var();
-    /* width: 800px; */
     padding: 25px 40px 10px 40px;
     box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
     margin: 0 auto;
@@ -127,7 +115,7 @@ body{
     background: var(--primary2);
     transform: scaleX(0);
     transform-origin: center;
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
   }
   .input-data input:focus ~ .underline:before,
   .input-data input:valid ~ .underline:before{
@@ -191,7 +179,10 @@ body{
       background: var(--secondary1);
       border-radius: 10px;
   }
-
+label
+{
+  margin-top: 2em;
+}
 /* .decoration  {
      position: absolute;
      right: -80px;
