--- a/style.css
+++ b/style.css
@@ -54,11 +54,7 @@ nav > ul{
   padding: 0;
   
 }
-nav > ul > li 
-{
-    /* background-color: #F7941E;
-    padding: 0.2em; */
-}
+
 nav > ul > li > a
 {
     
@@ -73,17 +69,7 @@ nav > ul > li > a
 
 }
 
-nav > ul > li > a:hover:not(sign)
-{
-    
-    color: var(--primary2);
-    /* border-bottom:2px solid var(--primary3); */
-}
 
-/* nav > ul > li > a:hover
-{
-    border: 1px red solid;
-} */
 
 .logo
 {
@@ -104,8 +90,10 @@ nav > ul > li > a:hover:not(sign)
 
 /* .banner
 {
-    border-bottom: 1px solid var(--secondary1);
+    height: 100vh;
 } */
+
+
 
 .bann_title
 {
@@ -129,7 +117,7 @@ nav > ul > li > a:hover:not(sign)
     position: absolute;
     content: '';
     width: 460px;
-    height: 440px;
+    height: 460px;
     background: var(--primary3);
     top:-150px;
     right:-700px;
@@ -226,11 +214,11 @@ nav > ul > li > a:hover:not(sign)
 
 .service
 {
-    position: relative;
-   height: 100vh;
-   bottom:-30em;
+   position: relative;
+   height: 80vh;
+   bottom:-33em;
    border-top: 1px solid var(--secondary1);
-   /* display: flex; */
+   margin-top: 1em;
 }
 
 .secTitle
@@ -651,7 +639,7 @@ footer
 .mid_foot_item
 {
     /* border:1px solid gold; */
-    flex-basis: 19%;
+    flex-basis: 18%;
    
 }
 
@@ -660,7 +648,8 @@ footer
     color: var(--secondary3);
     font-size:0.8em;
     line-height: 1.4em;
-    padding-left: 1.5em;
+    padding: 1em 1.5em 0 1.5em;
+    /* margin-top: 1em; */
 }
 .social_foot
 {
@@ -713,13 +702,18 @@ footer
   
 }
 
-.mid_foot_item > form >input
+.mid_foot_item > form
 {
+    display: flex;
+    
+}
+
+/* #mail{
     border: none;
     background: var(--primary3);
     padding: 1em ;
-   
-}
+} */
+
 .mid_foot_item > form >i
 {
     background: var(--primary2);
@@ -817,7 +811,7 @@ footer
     .service
     {
         height:300vh;
-        border: 1px solid red;
+        /* border: 1px solid red; */
         display: flex;
         flex-direction: column;
         overflow: hidden;
@@ -880,7 +874,7 @@ footer
 
     .thirdSec
     {
-        border: 1px solid gold;
+        /* border: 1px solid gold; */
         height: fit-content;
     }
 
@@ -973,9 +967,15 @@ footer
    {
        height: fit-content;
        flex-direction: column;
+       flex-wrap: nowrap;
        justify-content: center;
        text-align: center;
        border-top: 1px solid var(--secondary2);
+   }
+
+   .mid_foot_item > form >i
+   {
+       margin-left:-4.9em;
    }
 
    .down_parag
